--- a/SignalApp/templates/report_maker/basefile.html
+++ b/SignalApp/templates/report_maker/basefile.html
@@ -11,16 +11,12 @@
 <div>
     {% include 'includes/_navbar.html' %}
 </div>
-<div class="card" style="margin-bottom:126px;">
+<div class="card">
 
 </div>
-{% endif %}
-
 {% block body %}
 
 {% endblock %}
 </body>
-{% include 'includes/_footer_bar.html' %}
-
 {% include 'includes/footer.html' %}
 </html>
