changes for the first optimal version, now we need to make it streamable and calculate the data required

--- a/SignalApp/templates/includes/_meta.html
+++ b/SignalApp/templates/includes/_meta.html
@@ -171,9 +171,8 @@ gtag('config', 'UA-23581568-13');
 <script type="text/javascript" src="{% static 'scripts/basefile_scripts.js'%}"></script>
 <link rel="stylesheet" type="text/css" href="{% static 'css/toastr.css'%}">
     <!--Stripe Elements-->
-  <script src="https://js.stripe.com/v3/"></script>
 <script>
-    {% include "includes/pagination/custom_pagination.js" %}
+    {% include "includes/actions.js" %}
 </script>
 </head>
 {% include 'includes/_main_style.html'  %}
