finishing one of the final commits on the first version

--- a/SignalApp/templates/includes/_meta.html
+++ b/SignalApp/templates/includes/_meta.html
@@ -23,6 +23,7 @@
 <!-- Favicon -->
 <link rel="icon" href="{% static 'logos/logo1.png'%}" type="image/jpeg">
 
+
 <!-- Jquery -->
 <script type="text/javascript" src="\static\adminty\files\bower_components\jquery\js\jquery.min.js"></script>
 <!-- Icons -->
@@ -38,6 +39,24 @@
 
 <!-- Google font-->
 <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,800" rel="stylesheet">
+
+<!-- Date-time picker css -->
+<link rel="stylesheet" type="text/css" href="\static\adminty\files\assets\pages\advance-elements\css\bootstrap-datetimepicker.css">
+<!-- Date-range picker css  -->
+<link rel="stylesheet" type="text/css" href="\static\adminty\files\bower_components\bootstrap-daterangepicker\css\daterangepicker.css">
+
+<!-- Date-Dropper css -->
+<link rel="stylesheet" type="text/css" href="\static\adminty\files\bower_components\datedropper\css\datedropper.min.css">
+<!-- Bootstrap date-time-picker js -->
+<script type="text/javascript" src="\static\adminty\files\assets\pages\advance-elements\moment-with-locales.min.js"></script>
+<script type="text/javascript" src="\static\adminty\files\bower_components\bootstrap-datepicker\js\bootstrap-datepicker.min.js"></script>
+<script type="text/javascript" src="\static\adminty\files\assets\pages\advance-elements\bootstrap-datetimepicker.min.js"></script>
+<!-- Date-range picker js -->
+<script type="text/javascript" src="\static\adminty\files\bower_components\bootstrap-daterangepicker\js\daterangepicker.js"></script>
+<!-- Date-dropper js -->
+<script type="text/javascript" src="\static\adminty\files\bower_components\datedropper\js\datedropper.min.js"></script>
+
+
 
 <!-- Data Table Css -->
 <link rel="stylesheet" type="text/css" href="{% static 'adminty\files\bower_components\datatables.net-bs4\css\dataTables.bootstrap4.min.css'%}">
@@ -149,6 +168,8 @@
 <script src="\static\adminty\files\assets\js\jquery.mCustomScrollbar.concat.min.js"></script>
 <!-- Custom js -->
 <script type="text/javascript" src="\static\adminty\files\assets\js\script.js"></script>
+
+
 
 
 
