adding new changes based on new API which helps to manage the data and brings the data better

--- a/SignalApp/templates/includes/_meta.html
+++ b/SignalApp/templates/includes/_meta.html
@@ -122,7 +122,7 @@
 
 <!-- TOASTR -->
 <link rel="stylesheet" href="{% static 'css/toastr.css'%}">
-<script src="{% static 'js/toastr.js'%}"></script>
+<script src="{% static 'scripts/toastr.js'%}"></script>
 <!-- TOASTR -->
 
 
